# schemas/api/src/index.ts
@@ -15,7 +15,7 @@ export type { GetEventsResponseModel } from './models/GetEventsResponseModel';
 export type { GetUserByIDResponseModel } from './models/GetUserByIDResponseModel';
 export type { GetUserMeRefreshModel } from './models/GetUserMeRefreshModel';
 export type { GetUserMeResponseModel } from './models/GetUserMeResponseModel';
-export type { ParticipantsModel } from './models/ParticipantsModel';
+export type { ParticipantModel } from './models/ParticipantModel';
 export type { UserCreateModel } from './models/UserCreateModel';
 export type { UserGeneratePasswordResetModel } from './models/UserGeneratePasswordResetModel';
 export type { UserLoginModel } from './models/UserLoginModel';
@@ -25,7 +25,4 @@ export type { UserWithoutPasswordModel } from './models/UserWithoutPasswordModel
 
 export { AdminService } from './services/AdminService';
 export { EventService } from './services/EventService';
-export { LadderService } from './services/LadderService';
-export { MatchService } from './services/MatchService';
 export { UserService } from './services/UserService';
-export { UserEventService } from './services/UserEventService';
