# schemas/api/src/models/EventModel.ts
@@ -1,0 +1,38 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * An event with event details
+ */
+export type EventModel = {
+    /**
+     * ID of event
+     */
+    id: number;
+    /**
+     * Name of event
+     */
+    name: string;
+    /**
+     * Number of max spots open for event
+     */
+    spots: number;
+    /**
+     * Start epoch of event
+     */
+    start: string;
+    /**
+     * Open epoch of event
+     */
+    open: string;
+    /**
+     * Event is enabled or disabled
+     */
+    enabled: boolean;
+    /**
+     * Price of event in cents
+     */
+    price: number;
+};
+
