# schemas/api/src/models/GetEventByIDResponseModel.ts
@@ -1,0 +1,10 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { EventModel } from './EventModel';
+
+/**
+ * Event
+ */
+export type GetEventByIDResponseModel = EventModel;
