# schemas/api/src/models/ParticipantModel.ts
@@ -1,0 +1,11 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * Participant model for events
+ */
+export type ParticipantModel = {
+    user?: string;
+};
+
